# jagtskydningsapp

./: main.py  pyproject.toml  requirements.txt
