[project]
name = "jagtskydningsapp"
version = "0.1.0"
description = "Web app til registrering af skyderesultater"
readme = "README.md"
requires-python = ">=3.13"
dependencies[
    "python_fasthtml>=0.12.40"
    "supabase>=2.27.3"
    "python-dotenv>=1.2.1"
    "pandas>=3.0.0"
    "monsterui>=1.0.43"
    "plotly>=6.5.2"
    "requests>=2.32.5"
]